<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Todo List Android</string>
  <string name="app_language_english" translatable="false">English</string>
  <string name="app_language_vietnamese" translatable="false">Tiếng Việt</string>
  <string name="sign_in">Sign In</string>
  <string name="main_let_start">Let\'s start</string>
  <string-array name="language_names">
    <item>@string/app_language_english</item>
    <item>@string/app_language_vietnamese</item>
  </string-array>
  <string name="main_text_welcome">Manage your Task with</string>
  <string name="sign_in_welcome_back">Welcome Back!</string>
  <string name="sign_in_email_address">Email Address</string>
  <string name="sign_in_password">Password</string>
  <string name="sign_in_forgot_password">Forgot Password?</string>
  <string name="sign_in_log_in">Log In</string>
  <string name="sign_in_or_continue_with">Or continue with</string>
  <string name="sign_in_google">Google</string>
  <string name="sign_in_do_not_have_an_account">Don\'t have an account?</string>
  <string name="sign_up">Sign Up</string>
  <string name="main_text_welcome_subscribe">DayTask</string>
  <string name="app_ok">Ok</string>
  <string name="app_coming_soon">Coming soon</string>
  <string name="app_notification">Notification</string>
  <string name="sign_up_create_your_account">Create your account</string>
  <string name="sign_up_full_name">Full Name</string>
  <string name="sign_up_i_have_read_and_agree_daytask">I have read &amp; agreed to DayTask</string>
  <string name="sign_up_privacy_policy">Privacy Policy</string>
  <string name="sign_up_already_have_an_account">Already have an account?</string>
  <string name="sign_up_term_and_condition">Term and Condition</string>
  <string name="bottom_tab_home">Home</string>
  <string name="bottom_tab_messages">Messages</string>
  <string name="bottom_tab_calendar">Calendar</string>
  <string name="bottom_tab_notifications">Notifications</string>
  <string name="bottom_tab_settings">Settings</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="home_welcome_back">Welcome Back!</string>
  <string name="home_completed_projects">Completed Project</string>
  <string name="home_team_members">Team members</string>
  <string name="home_completed">Completed</string>
  <string name="home_ongoing_project">Ongoing Project</string>
  <string name="home_due_on">Due on</string>
  <string name="home_see_all">See all</string>
  <string name="app_three_dot">...</string>
  <string name="home_search_tasks">Search tasks</string>
  <string name="home_add_project">Add Project</string>
  <string name="create_project_project_title">Project Title</string>
  <string name="create_project_project_details">Project Details</string>
  <string name="create_project_add_team_members">Add team members</string>
  <string name="create_project_time_and_date">Time &amp; Date</string>
  <string name="create_project_add_new">Add New</string>
  <string name="create_project_create">Create</string>
  <string name="project_details">Project Details</string>
  <string name="project_details_due_date">Due Date</string>
  <string name="project_details_project_team">Project Team</string>
  <string name="project_details_details">Details</string>
  <string name="project_details_progress">Process</string>
  <string name="project_details_all_tasks">All Tasks</string>
  <string name="project_details_add_task">Add Task</string>
  <string name="create_task_create_new_project">Create New Task</string>
  <string name="create_task_task_title">Task Title</string>
  <string name="create_task_task_details">Task Detail</string>
  <string name="create_task_add_assign_members">Assign Members</string>
  <string name="create_task_time_and_date">Time &amp; Date</string>
  <string name="create_task_save">Save</string>
  <string name="task_details">Task Details</string>
  <string name="task_details_details">Details</string>
  <string name="task_details_due_date">Due Date</string>
  <string name="task_details_assigned_members">Assigned members</string>
  <string name="task_details_save">Save</string>
  <string name="create_project_create_new_project">Create New Project</string>
  <string name="create_task">Create Task</string>
  <string name="bottom_tab_contacts">Contacts</string>
  <string name="contacts">Contacts</string>
  <string name="contact_details">Contact Details</string>
  <string name="contact_details_add">Add</string>
  <string name="contact_details_delete">Delete</string>
  <string name="contact_details_block">Block</string>
  <string name="contact_details_un_block">Unblock</string>
</resources>