<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/navigation_home"
    android:icon="@drawable/home_tab_icon"
    android:title="@string/bottom_tab_home" />

  <item
    android:id="@+id/navigation_contacts"
    android:icon="@drawable/contact_tab_icon"
    android:title="@string/bottom_tab_contacts" />

  <item
    android:id="@+id/navigation_calendar"
    android:icon="@drawable/calendar_tab_icon"
    android:title="@string/bottom_tab_calendar" />

  <item
    android:id="@+id/navigation_messages"
    android:icon="@drawable/messages_tab_icon"
    android:title="@string/bottom_tab_messages" />

  <item
    android:id="@+id/navigation_notifications"
    android:icon="@drawable/notification_tab_icon"
    android:title="@string/app_notification" />


</menu>