<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/card"
  android:layout_width="match_parent"
  android:layout_height="120dp"
  android:background="@color/color_input_1"
  android:orientation="vertical"
  android:padding="8dp">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Mobile App Wireframe"
    android:textSize="20dp"
    android:textStyle="bold" />

  <Space
    android:layout_width="match_parent"
    android:layout_height="5dp" />


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_team_members"
        android:textSize="11dp"
        android:textStyle="normal" />

      <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

      <ImageView
        android:layout_width="50px"
        android:layout_height="50px"
        android:src="@mipmap/avatar_test" />

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/home_due_on"
          android:textSize="11dp"
          android:textStyle="normal" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text=" : "
          android:textSize="11dp"
          android:textStyle="normal" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="21 March"
          android:textSize="11dp"
          android:textStyle="normal" />

      </LinearLayout>

    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:gravity="bottom">

      <RelativeLayout
        android:layout_width="200px"
        android:layout_height="200px">

        <ProgressBar
          android:id="@+id/progress"
          style="@style/progress_bar_circle"
          android:layout_width="match_parent"
          android:layout_height="match_parent" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center">

          <TextView
            android:id="@+id/text_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_three_dot"
            android:textSize="11dp"
            android:textStyle="normal" />
        </LinearLayout>
      </RelativeLayout>
    </LinearLayout>
  </LinearLayout>

</LinearLayout>